--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 *{
-     font-family: "Playfair", serif;
+     font-family: "Roboto Slab", serif;
+}
+p{
+     font-size: 18px;
+}
+.tool-content h4,.testimony h4{
+     font-weight: 800;
+}
+.testimony_user img{
+     height: 100px;
+     width: 100px;
+     object-fit: cover;
+}
+.testimony p{
+     text-align: justify;
 }
