--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 p{
      font-size: 18px;
 }
-.tool-content h4,.testimony h4{
+.tool-content h4,.testimony h4,h3{
      font-weight: 800;
 }
 .testimony_user img{
